Favicons and social media cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="main.css">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#282d34">
+  <meta name="msapplication-TileColor" content="#282d34">
   <meta name="theme-color" content="#282D34">
+
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@hacknext" />
+  <meta property="og:url" content="https://hacknextse.github.io/" />
+  <meta property="og:title" content="hack next" />
+  <meta property="og:description" content="a friendly cabin hack in mid-sweden, bring your friends!" />
+  <meta property="og:image" content="https://hacknextse.github.io/social-card.png" />
 </head>
 
 <body>
