--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>hack next</title>
+  <meta name="description" content="a friendly cabin hack in mid-sweden, bring your friends!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="main.css">
 
+  <!-- social media share metadata -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@stefan_wallin" />
+  <meta property="og:url" content="https://hacknextse.github.io/" />
+  <meta property="og:title" content="hack next" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="a friendly cabin hack in mid-sweden, bring your friends!" />
+  <meta property="og:image" content="https://hacknextse.github.io/social-card.png" />
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -19,18 +25,11 @@
   <meta name="msapplication-TileColor" content="#282d34">
   <meta name="theme-color" content="#282D34">
 
-
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@hacknext" />
-  <meta property="og:url" content="https://hacknextse.github.io/" />
-  <meta property="og:title" content="hack next" />
-  <meta property="og:description" content="a friendly cabin hack in mid-sweden, bring your friends!" />
-  <meta property="og:image" content="https://hacknextse.github.io/social-card.png" />
 </head>
 
 <body>
   <header>
-    <img src="logo.png" width="200px"/>
+    <img src="logo.png" width="200px" alt="hack next logo"/>
   </header>
 
   <main>
@@ -58,7 +57,7 @@
 
     <h2>bring</h2>
     <ul>
-      <li>bed linen <strong>!important</strong></li>
+      <li>bed linen <strong>!important</strong>(or book with cabin)</li>
       <li>headphones <strong>!important</strong></li>
       <li>personal towels (bath + toilet)</li>
       <li>clothes, toiletries, medicines...</li>
@@ -72,13 +71,16 @@
     <h2>info</h2>
     <ul>
       <li>The event is free, but you pay for all your expenses and organize yourself</li>
-      <li>Most cabins have a power budget of 150W/person.</li>
-      <li>Most cabins have a wifi, bring personal 4G if speedfreak.</li>
-      <li>Cross-cabin joint hotel dinner on saturday.</li>
-      <li>You can cook in the cabins or eat out in Järvsö.</li>
-      <li>You are responsible for your own cabin and your own food.</li>
+      <li>Most cabins have a power budget of 150W/person</li>
+      <li>Most cabins have a wifi, bring personal 4G if speedfreak</li>
+      <li>Cross-cabin joint hotel dinner on saturday</li>
+      <li>You can cook in the cabins or eat out in Järvsö</li>
+      <li>You are responsible for your own cabin and your own food</li>
       <li><strong>Tip:</strong> You can have cleaning included in your booking</li>
     </ul>
+
+    <h2>got questions?</h2>
+    reach out to <a href="https://twitter.com/Stefan_Wallin">stefan_wallin</a> on twitter
   </main>
 </body>
 </html>
