Use correct domain name in link text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2>how</h2>
     <ol>
       <li>gather your best hacker and designer friends</li>
-      <li>book a cabin around alpstigen through <a href="https://jarvso.se/bo-i-jarvso/">jarvsö.se</a></li>
+      <li>book a cabin around alpstigen through <a href="https://jarvso.se/bo-i-jarvso/">jarvso.se</a></li>
       <li>book a mini bus/train/car to järvsö</li>
       <li>pack your stuff</li>
       <li>profit!</li>
