Add why and cabins booked

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
     <p>alpstigen, järvsö</p>
     <p><a href="https://www.google.se/maps/search/61.722406,16.160642">61.722406,16.160642</a></p>
 
+    <h2>why</h2>
+    The real benefits of being far away from home is that you are commited to what you are doing and that is good for your inner coding-zen. No chores or duties can disturb your focus in the middle of the mountains unless you decide so. We tend to focus on networking and honing our skills as developers.
+
+    <h3>already taken cabins</h3>
+    <ul>
+      <li>
+        Alpstigen
+        <ul>
+          <li>2a</li>
+          <li>4a</li>
+        </ul>
+      </li>
+    </ul>
+    <p>If you book a cabin, <a href="https://twitter.com/Stefan_Wallin">tell me on twitter</a>.</p>
+
     <h2>how</h2>
     <ol>
       <li>gather your best hacker and designer friends</li>
