--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
   <main>
     <h2>what</h2>
-    <p>a cabin-hack in the middle of sweden</p>
-    <p>since 2014 a small group of developers have gotten together in cabin in Järvsö to hack on hobby projects, and eat and drink well — now we want more hackers!
+    <p>a cabin-hack in the middle of Sweden</p>
+    <p>since 2014 a small self-organizing hack have taken place in Järvsö, groups of friends have meet to hack on hobby projects, socialize and eat well!</p>
 
     <h2>dates</h2>
     <p>2019-11-21</p>
@@ -43,54 +43,23 @@
     <p>2019-11-24</p>
 
     <h2>location</h2>
-    <p>alpstigen, järvsö</p>
-    <p><a href="https://www.google.se/maps/search/61.722406,16.160642">61.722406,16.160642</a></p>
-
-    <h2>why</h2>
-    The real benefits of being far away from home is that you are commited to what you are doing and that is good for your inner coding-zen. No chores or duties can disturb your focus in the middle of the mountains unless you decide so. We tend to focus on networking and honing our skills as developers.
-
-    <h3>already taken cabins</h3>
-    <ul>
-      <li>
-        Alpstigen
-        <ul>
-          <li>2a</li>
-          <li>4a</li>
-        </ul>
-      </li>
-    </ul>
-    <p>If you book a cabin, <a href="https://twitter.com/Stefan_Wallin">tell me on twitter</a>.</p>
+    <p>cabins on the mountainside of järvsö</p>
 
     <h2>how</h2>
     <ol>
       <li>gather your best hacker and designer friends</li>
       <li>book a cabin around alpstigen through <a href="https://jarvso.se/bo-i-jarvso/">jarvso.se</a></li>
-      <li>book a mini bus/train/car to järvsö</li>
+      <li>book a minibus/train/car to Järvsö</li>
       <li>pack your stuff</li>
       <li>profit!</li>
     </ol>
-
-    <h2>bring</h2>
-    <ul>
-      <li>bed linen <strong>!important</strong>(or book with cabin)</li>
-      <li>headphones <strong>!important</strong></li>
-      <li>personal towels (bath + toilet)</li>
-      <li>clothes, toiletries, medicines...</li>
-      <li>money for food</li>
-      <li>computer & charger</li>
-      <li>phone & charger</li>
-      <li>extension cord</li>
-      <li>swimming trunks for sauna</li>
-    </ul>
+    <p>If you book a cabin, <a href="https://twitter.com/Stefan_Wallin">reach out to me on twitter</a>.</p>
 
     <h2>info</h2>
     <ul>
-      <li>The event is free, but you pay for all your expenses and organize yourself</li>
       <li>Most cabins have a power budget of 150W/person</li>
-      <li>Most cabins have a wifi, bring personal 4G if speedfreak</li>
-      <li>Cross-cabin joint hotel dinner on saturday</li>
+      <li>Most cabins have a wifi</li>
       <li>You can cook in the cabins or eat out in Järvsö</li>
-      <li>You are responsible for your own cabin and your own food</li>
       <li><strong>Tip:</strong> You can have cleaning included in your booking</li>
     </ul>
 
