Add link to add the event to Google Calendar or iCal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <p>2020-11-19</p>
     <p>to</p>
     <p>2020-11-22</p>
+    <a href="https://calendar.google.com/calendar/r/eventedit?text=Hack+Next+2020&dates=20201119/20191122&trp=false&details=https://hacknextse.github.io/&pli=1&sf=true&location=Alpstigen%202,+Alpstigen,+Jarvs%C3%B6,+Sverige&sprop=https://hacknextse.github.io/" target="_blank">
+      google calendar</a>
+    |
+    <a href="./event.ics">
+      ical
+    </a>
 
     <h2>location</h2>
     <p>cabins on the mountainside of järvsö</p>
