--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="https://calendar.google.com/calendar/r/eventedit?text=Hack+Next+2021&dates=20210506/20210509&trp=false&details=https://hacknextse.github.io/&pli=1&sf=true&location=Alpstigen%202,+Alpstigen,+Jarvs%C3%B6,+Sverige&sprop=https://hacknextse.github.io/" target="_blank">
       google calendar</a>
     |
-    <a href="./event.ics">
+    <a href="./event2021spring.ics">
       ical
     </a>
 
