--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <p>since 2014 a small self-organizing hack have taken place in Järvsö, groups of friends have meet to hack on hobby projects, socialize and eat well!</p>
 
     <h2>dates</h2>
-    <p>2021-05-06</p>
+    <p>2021-11-18</p>
     <p>to</p>
-    <p>2021-05-09</p>
-    <a href="https://calendar.google.com/calendar/r/eventedit?text=Hack+Next+2021&dates=20210506/20210509&trp=false&details=https://hacknextse.github.io/&pli=1&sf=true&location=Alpstigen%202,+Alpstigen,+Jarvs%C3%B6,+Sverige&sprop=https://hacknextse.github.io/" target="_blank">
+    <p>2021-11-21</p>
+    <a href="https://calendar.google.com/calendar/r/eventedit?text=Hack+Next+2021&dates=20211118/20211121&trp=false&details=https://hacknextse.github.io/&pli=1&sf=true&location=Alpstigen%202,+Alpstigen,+Jarvs%C3%B6,+Sverige&sprop=https://hacknextse.github.io/" target="_blank">
       google calendar</a>
     |
-    <a href="./event2021spring.ics">
+    <a href="./event2021fall.ics">
       ical
     </a>
 
