--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>hack next</title>
+  <title>HackNext</title>
   <meta name="description" content="a friendly cabin hack in mid-sweden, bring your friends!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css">
@@ -12,7 +12,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@stefan_wallin" />
   <meta property="og:url" content="https://hacknextse.github.io/" />
-  <meta property="og:title" content="hack next" />
+  <meta property="og:title" content="HackNext" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="a friendly cabin hack in mid-sweden, bring your friends!" />
   <meta property="og:image" content="https://hacknextse.github.io/social-card.png" />
@@ -29,13 +29,13 @@
 
 <body>
   <header>
-    <img src="logo.png" width="200px" alt="hack next logo"/>
+    <img src="logo.png" width="200px" alt="HackNext logo"/>
   </header>
 
   <main>
     <h2>what</h2>
     <p>a cabin-hack in the middle of Sweden</p>
-    <p>since 2014 a small self-organizing hack have taken place in Järvsö, groups of friends have meet to hack on hobby projects, socialize and eat well!</p>
+    <p>since 2014 a small self-organizing hack has taken place in Järvsö, groups of friends have met to hack on hobby projects, socialize, and eat well!</p>
 
     <h2>dates</h2>
     <p>2024-11-14</p>
